--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -25,30 +25,36 @@
             >Home</a
           >
         </li>
-      </ul>
-    </div>
-    <div class="d-flex">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/register"
-            >Register</a
-          >
-        </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="(auth.isAuthenticated$ | async)">
           <a class="nav-link" aria-current="page" routerLink="/create-post"
             >Create Post</a
           >
         </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/profile"
-            >Profile</a
+      </ul>
+    </div>
+    <div class="d-flex">
+      <ul class="navbar-nav">
+        <li class="nav-item" *ngIf="auth.user$ | async as user">
+          <span class="nav-link" aria-current="page" style="color: red"
+            ><strong>Welcome {{user?.given_name}}</strong></span
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/login">Login</a>
+          <a
+            class="btn btn-primary"
+            aria-current="page"
+            routerLink="/login"
+            *ngIf="!(auth.isAuthenticated$ | async)"
+            (click)="login()"
+            >Login</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="javascript:void(0)"
+          <a
+            class="btn btn-warning"
+            href="javascript:void(0)"
+            *ngIf="(auth.isAuthenticated$ | async)"
+            (click)="logout()"
             >Logout</a
           >
         </li>
