--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,6 +1,7 @@
 <ul *ngIf="auth.user$ | async as user">
   <li>{{ user.name }}</li>
   <li>{{ user.email }}</li>
+  <li>{{ user | json }}</li>
 </ul>
 <button
   type="button"
