--- a/src/app/pages/dashboard/dashboard.scss
+++ b/src/app/pages/dashboard/dashboard.scss
@@ -1,15 +1,1 @@
-.property-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    gap: 16px;
-    flex-wrap: wrap;
-
-    li {}
-}
-
-.favourite {
-    background-color: pink;
-    border: 2px solid red;
-}
+.allposts {}
