--- a/src/app/pages/dashboard/dashboard.scss
+++ b/src/app/pages/dashboard/dashboard.scss
@@ -3,8 +3,41 @@
     padding: 0;
     list-style: none;
 
-    li {
+    >li {
         display: flex;
-        flex-direction: column;
+        gap: 24px;
+        margin-bottom: 32px;
+        padding-bottom: 32px;
+        border-bottom: 1px solid gray;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+
     }
+}
+
+ol.post-meta {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+
+    >li {
+        border-right: 1px solid gray;
+        padding-right: 16px;
+
+        &:last-child {
+            border-right: none;
+        }
+    }
+}
+
+.max-popular {
+    margin-bottom: 44px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid gray;
 }
