--- a/src/app/components/paginate/paginate.component.html
+++ b/src/app/components/paginate/paginate.component.html
@@ -1,6 +1,6 @@
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item">
+    <li class="page-item" [class.disabled]="activePage() == 1">
       <a
         class="page-link"
         href="javascript:void(0)"
@@ -10,22 +10,20 @@
         <span aria-hidden="true">&laquo;</span>
       </a>
     </li>
-    <li class="page-item active">
-      <a class="page-link" href="javascript:void(0)" (click)="paginate($event)"
-        >1</a
+    @for (item of numberOfPage; track $index){
+    <li class="page-item" [class.active]="item === activePage()">
+      <a
+        class="page-link"
+        href="javascript:void(0)"
+        (click)="paginate($event, item)"
+        >{{ item }}</a
       >
     </li>
-    <li class="page-item">
-      <a class="page-link" href="javascript:void(0)" (click)="paginate($event)"
-        >2</a
-      >
-    </li>
-    <li class="page-item">
-      <a class="page-link" href="javascript:void(0)" (click)="paginate($event)"
-        >3</a
-      >
-    </li>
-    <li class="page-item">
+    }
+    <li
+      class="page-item"
+      [class.disabled]="activePage() == numberOfPage.length"
+    >
       <a
         class="page-link"
         href="javascript:void(0)"
