--- a/src/app/components/paginate/paginate.component.scss
+++ b/src/app/components/paginate/paginate.component.scss
@@ -12,5 +12,12 @@
                 background-color: #ffc107;
             }
         }
+
+        &.disabled {
+            a {
+                background-color: lightgray;
+            }
+
+        }
     }
 }
