--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -8,6 +8,7 @@
 </div>
 }
 <search (searchTerm)="search($event)"></search>
+
 <div class="max-popular">
   <h1>Most Popular on This Page</h1>
   <img
@@ -26,7 +27,7 @@
     </li>
     <li><strong>Dislikes:</strong> {{maxPoplar?.reactions?.dislikes}}</li>
     <li>
-      <strong>Tags: </strong>
+      <i class="material-icons" title="tags">sell</i>
       @if (maxPoplar !== null) { @for (tag of maxPoplar.tags; track $index) {
       <span>{{ tag }}&nbsp;|&nbsp;</span>
       } }
@@ -35,14 +36,25 @@
     <li><a href="#">Read More...</a></li>
   </ol>
 </div>
+<div class="row justify-content-end mb-5">
+  <div class="col-4 d-flex gap-3 align-items-center">
+    <label for="Sort"> <strong>Sort</strong> </label>
+    <select name="sort" id="sort" class="form-select">
+      <option value="Select">Select</option>
+      <option value="Latest">Latest</option>
+      <option value="Most Popular">Most Popular</option>
+    </select>
+  </div>
+</div>
 <ul class="allposts">
   @if(items?.length){ @for (item of items; track $index){
   <li>
     <div class="des">
       <h3>{{item?.title}}</h3>
       <p>{{item?.body}} <a href="#">Read More...</a></p>
-      <p>
-        <strong>Tags: </strong> @for (tag of item.tags; track $index) {
+      <p class="tags">
+        <i class="material-icons" title="tags">sell</i> @for (tag of item.tags;
+        track $index) {
         <span>{{ tag }}&nbsp;|&nbsp;</span>
         }
       </p>
