--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -39,8 +39,8 @@
 <div class="row justify-content-end mb-5">
   <div class="col-4 d-flex gap-3 align-items-center">
     <label for="Sort"> <strong>Sort</strong> </label>
-    <select name="sort" id="sort" class="form-select">
-      <option value="Select">Select</option>
+    <select name="sort" id="sort" class="form-select" (change)="sort($event)">
+      <option value="">Select</option>
       <option value="Latest">Latest</option>
       <option value="Most Popular">Most Popular</option>
     </select>
