--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -7,7 +7,6 @@
   ></paginate>
 </div>
 }
-<search (searchTerm)="search($event)"></search>
 
 <div class="max-popular">
   <h1>Most Popular on This Page</h1>
@@ -36,11 +35,12 @@
     <li><a href="#">Read More...</a></li>
   </ol>
 </div>
+<search (searchTerm)="search($event)"></search>
 <div class="row justify-content-end mb-5">
   <div class="col-4 d-flex gap-3 align-items-center">
     <label for="Sort"> <strong>Sort</strong> </label>
     <select name="sort" id="sort" class="form-select" (change)="sort($event)">
-      <option value="">Select</option>
+      <option value="Default">Default</option>
       <option value="Latest">Latest</option>
       <option value="Most Popular">Most Popular</option>
     </select>
