added search on auther

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -8,7 +8,7 @@
     name="search"
     id="search"
     class="form-control border-0"
-    placeholder="Search..."
+    [placeholder]="placeholder()"
     #ref
     (input)="onSearch($any($event.target).value)"
   />
