--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -6,7 +6,7 @@
   data-bs-theme="light"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/dashboard">iPublishing</a>
+    <a class="navbar-brand" routerLink="/dashboard">Home</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -20,11 +20,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/dashboard"
-            >Home</a
-          >
-        </li>
         <li class="nav-item" *ngIf="(auth.isAuthenticated$ | async)">
           <a class="nav-link" aria-current="page" routerLink="/authors"
             >Authors List</a
