--- a/src/app/pages/articledetail/articledetail.component.html
+++ b/src/app/pages/articledetail/articledetail.component.html
@@ -1,1 +1,26 @@
-<p>articledetail works!</p>
+@let detail = articalDetail()??null;
+<div class="max-popular">
+  <h1>{{ detail?.title }}</h1>
+  <img
+    [src]="detail?.image"
+    [alt]="detail?.title"
+    style="width: 100%; max-height: 300px; margin-bottom: 20px"
+  />
+  <p>{{ detail?.body }}</p>
+  <ol class="post-meta">
+    <li><strong>Published:</strong> {{ detail?.publishedDate }}</li>
+    <li>
+      <span class="blink_text"
+        ><strong>Most Liked:</strong> {{ detail?.reactions?.likes }}</span
+      >
+    </li>
+    <li><strong>Dislikes:</strong> {{ detail?.reactions?.dislikes }}</li>
+    <li>
+      <strong>Tags: </strong>
+      @if (detail !== null) { @for (tag of detail.tags; track $index) {
+      <span>{{ tag }}&nbsp;|&nbsp;</span>
+      } }
+    </li>
+    <li><strong>Author Name:</strong> {{ detail?.authorName }}</li>
+  </ol>
+</div>
