--- a/src/app/components/comments/comments.component.scss
+++ b/src/app/components/comments/comments.component.scss
@@ -2,4 +2,12 @@
     margin: 0;
     padding: 0;
     list-style: none;
+
+    li {
+        >ul {
+            margin: 0 0 0 20px;
+            padding: 0;
+            list-style: none;
+        }
+    }
 }
