--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+// @import 'ngx-editor/styles/style.scss';
+
 /* You can add global styles to this file, and also import other style files */
 .form-select,
 .form-control {
