--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,4 +1,4 @@
-<!-- @let data = postData(); -->
+@let data = postData();
 <div class="modal fade show" style="display: block">
   <div class="modal-dialog modal-xl modal-dialog-centered">
     <div class="modal-content">
@@ -10,46 +10,46 @@
           type="button"
           class="btn-close"
           aria-label="Close"
-          (click)="close()"
+          (click)="cancel()"
         ></button>
       </div>
       <div class="modal-body">
         <div class="row mb-3">
           <div class="col-12 previewBox">
             <label class="fw-semibold">Post Title</label>
-            <div>title</div>
+            <div>{{ data.title }}</div>
           </div>
         </div>
 
         <div class="row mb-3">
           <div class="col-12 previewBox">
             <label class="fw-semibold">Post body</label>
-            <div>body</div>
+            <div [innerHTML]="data?.body"></div>
           </div>
         </div>
         <div class="row mb-3">
           <div class="col-12 previewBox">
             <label class="fw-semibold">Post tags</label>
-            <div>body</div>
+            <div>{{ data?.tags }}</div>
           </div>
         </div>
 
         <div class="row mb-3">
           <div class="col-12 previewBox">
             <label class="fw-semibold">Published date</label>
-            <div>body</div>
+            <div>{{ data?.publishedDate }}</div>
           </div>
         </div>
 
         <div class="row mb-3">
           <div class="col-12 previewBox">
             <label class="fw-semibold">Author name</label>
-            <div>body</div>
+            <div>{{ data?.authorName }}</div>
           </div>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="close()">
+        <button type="button" class="btn btn-secondary" (click)="cancel()">
           Close
         </button>
         <button type="button" class="btn btn-primary" (click)="onSubmit()">
