--- a/src/app/pages/create-post/create-post.component.html
+++ b/src/app/pages/create-post/create-post.component.html
@@ -90,4 +90,9 @@
     Submit
   </button>
 </form>
-<modal *ngIf="preview"></modal>
+<modal
+  *ngIf="preview"
+  [postData]="postData()"
+  (onPreviewSubmit)="onPreviewSubmit()"
+  (onClose)="onModalClose($event)"
+></modal>
